<resources>
    <string name="app_name">GrinHits</string>
    <string name="get_started">Get started</string>
    <string name="skip">SKIP</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="provide_details_to_add_perks_in_your_smile">Provide details to add perks in your smile</string>
    <string name="enter_your_phone_no">Enter your phone no</string>
    <string name="sign_in">Sign in</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_type_the_verification_code_sent_to">Please type the verification code sent</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="continue_txt">Continue</string>
    <string name="please_enter_phone_number">Please Enter phone number</string>
    <string name="to">to</string>
    <string name="change">Change</string>
    <string name="category">Category</string>
    <string name="ghaziabad_201014">Ghaziabad, 201014</string>
    <string name="italian_food">Italian Food</string>
    <string name="up_to_20_off">Up to 20% Off</string>
    <string name="popular_item">Popular item</string>
    <string name="_500gm">500gm</string>
    <string name="rupees">₹</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="my_orders">My Orders</string>
    <string name="privacy_amp_policy">Privacy Policy</string>
    <string name="notification">Notification</string>
    <string name="contact_us">Contact Us</string>
    <string name="name">Name</string>
    <string name="krashna">Krashna</string>
    <string name="_7300909127">7300909127</string>
    <string name="term_amp_condition"><![CDATA[Term & Condition]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="robin_hood">Robin Hood</string>
    <string name="_91_452_125_1245">+91 452 125 1245</string>
    <string name="address">Address</string>
    <string name="add_more_address">+Add more address</string>
    <string name="log_out">Log Out</string>
    <string name="mark_john">Mark john</string>
    <string name="home_block_c_272_sector_22_paradise_hotel_ghaziabad_201014">Home - Block C-272, Sector -22, Paradise hotel, Ghaziabad, 201014</string>
    <string name="edit"><u>Edit</u></string>
    <string name="address_for_delivery">Address for delivery</string>
    <string name="add_address">Add Address</string>
    <string name="user_name">User name</string>
    <string name="phone_no">Phone No</string>
    <string name="street_1">Street 1</string>
    <string name="street">Street</string>
    <string name="street_2">Street 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip code</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_your_name">Edit your name</string>
    <string name="last_name">Last Name</string>
    <string name="are_you_sure_you_want_to_delete_the_address">Are you sure you want to Delete the Address?</string>
    <string name="no">no</string>
    <string name="edit_address">Edit Address</string>
    <string name="yes">Yes</string>
    <string name="dimen_are_you_want_sure">Are you sure you want to logout?</string>
    <string name="dimen_are_you_want_sure_login">Are you sure you want to login?</string>
    <string name="delete">Delete</string>
    <string name="are_you_want_sure">Are you sure you want to Delete the Address?</string>
    <string name="first_name">First Name</string>
    <string name="signup">SignUp</string>
    <string name="isLogin">login</string>
    <string name="xxxxxxxxxx">xxxxxxxxxx</string>
    <string name="login_first_proceed">Please Login first then you can proceed</string>
    <string name="warning">Warning</string>
</resources>