<?xml version="1.0" encoding="utf-8"?>
<layout>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.ProfileFragment">

    <ImageView
        android:id="@+id/profile_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_460dp"
        android:layout_marginBottom="290dp"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        android:src="@drawable/group_12256"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/add_address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_65dp"
        android:fontFamily="@font/varela_round_regular"
        android:text="@string/add_address"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_270dp"
        android:background="@drawable/top_corner_round_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/title_profile_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_41dp"
            android:fontFamily="@font/mont_serrat_semi_bold"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_desc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:fontFamily="@font/mont_serrat_regular"
            android:gravity="center"
            android:textColor="@color/color_otp_dark_choko"
            android:text="@string/xxxxxxxxxx"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_profile_tv" />

        <View
            android:id="@+id/view_line1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:background="@color/color_grey_line"
            app:layout_constraintTop_toBottomOf="@id/profile_desc_tv"/>

        <TextView
            android:id="@+id/profile_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:fontFamily="@font/mont_serrat_semi_bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/address"
            android:textSize="@dimen/dimen_18sp"
            android:layout_marginLeft="@dimen/dimen_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/address_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginLeft="@dimen/dimen_15dp"
            android:layout_marginRight="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintTop_toBottomOf="@id/profile_address_tv"/>

        <View
            android:id="@+id/pink_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_52dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@color/color_pink_light"
            app:layout_constraintTop_toBottomOf="@id/address_rv"/>

        <TextView
            android:id="@+id/profile_add_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round_regular"
            android:gravity="center"
            android:textColor="@color/color_otp_red"
            android:text="@string/add_more_address"
            android:layout_marginStart="@dimen/dimen_28dp"
            android:textSize="@dimen/dimen_18sp"
            android:layout_marginLeft="@dimen/dimen_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/pink_view"
            app:layout_constraintBottom_toBottomOf="@id/pink_view" />


        <View
            android:id="@+id/view_line2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@color/color_grey_line"
            app:layout_constraintTop_toBottomOf="@id/pink_view"/>

        <TextView
            android:id="@+id/edit_profile__tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:fontFamily="@font/mont_serrat_semi_bold"
            android:gravity="left|center"
            android:drawableLeft="@drawable/edit_profile"
            android:drawableRight="@drawable/arrrow_left"
            android:drawablePadding="@dimen/dimen_18dp"
            android:textColor="@color/black"
            android:text="@string/edit_profile"
            android:textSize="@dimen/diemn_15sp"
            android:layout_marginRight="@dimen/dimen_43dp"
            android:layout_marginLeft="@dimen/dimen_30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line2" />

        <View
            android:id="@+id/view_line3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:background="@color/color_grey_line"
            app:layout_constraintTop_toBottomOf="@id/edit_profile__tv"/>

        <TextView
            android:id="@+id/profile_logout__tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:fontFamily="@font/mont_serrat_semi_bold"
            android:gravity="left|center"
            android:drawableLeft="@drawable/profile_logout"
            android:drawablePadding="@dimen/dimen_18dp"
            android:textColor="@color/black"
            android:text="@string/log_out"
            android:textSize="@dimen/diemn_15sp"
            android:layout_marginLeft="@dimen/dimen_30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/dimen_30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line3" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>