<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/login_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        android:background="@color/white"
        android:src="@drawable/login_bg"
        android:layout_marginBottom="290dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/splash_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        android:src="@drawable/grinhits_text"
        app:layout_constraintEnd_toEndOf="@id/login_bg"
        android:layout_marginBottom="70dp"
        app:layout_constraintStart_toStartOf="@id/login_bg"
       app:layout_constraintBottom_toTopOf="@id/card_view" />

<androidx.cardview.widget.CardView
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dimen_50dp"
    android:background="@color/color_light_grey"
    app:cardElevation="@dimen/dimen_5dp"
    android:layout_marginBottom="@dimen/dimen_60dp"
    app:layout_constraintBottom_toBottomOf="@id/login_bg"
    app:layout_constraintTop_toBottomOf="@id/login_bg">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/title_login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/mont_serrat_bold"
            android:textSize="@dimen/dimen_24sp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dimen_30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/title_desc_tv"
            android:layout_width="@dimen/dimen_177dp"
            android:layout_height="wrap_content"
            android:text="@string/provide_details_to_add_perks_in_your_smile"
            android:fontFamily="@font/mont_serrat_regular"
            android:textSize="@dimen/dimen_12sp"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintTop_toBottomOf="@id/title_login_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/phone_no_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_14sp"
                android:textColor="@color/color_light_grey"
                android:fontFamily="@font/mont_serrat_regular"
                android:text="@string/enter_your_phone_no"
                android:layout_marginTop="@dimen/dimen_35dp"
                android:paddingLeft="@dimen/dimen_5dp"
                android:layout_marginLeft="@dimen/dimen_27dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_desc_tv"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phone_et"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_50dp"
                    android:focusable="true"
                    android:layout_marginRight="@dimen/dimen_27dp"
                    android:textSize="@dimen/dimen_18sp"
                    android:fontFamily="@font/mont_serrat_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:maxLength="10"
                    android:maxLines="1"
                    app:layout_constraintStart_toStartOf="@id/phone_no_title_tv"
                    app:layout_constraintTop_toBottomOf="@id/phone_no_title_tv"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_52dp"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:background="@drawable/gradient_green_btn"
            android:fontFamily="@font/mont_serrat_semi_bold"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintEnd_toEndOf="@id/phone_et"
            app:layout_constraintStart_toStartOf="@id/phone_et"
            app:layout_constraintTop_toBottomOf="@id/phone_et" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_52dp"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:background="@drawable/login_background_signup"
            android:fontFamily="@font/mont_serrat_semi_bold"
            android:gravity="center"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/color_dark_green"
            android:textSize="@dimen/dimen_14sp"
            android:layout_marginBottom="@dimen/dimen_30dp"
            app:layout_constraintEnd_toEndOf="@id/sign_in_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/sign_in_btn"
            app:layout_constraintTop_toBottomOf="@id/sign_in_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/skip_now_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_12sp"
        android:fontFamily="@font/mont_serrat_regular"
        android:text="@string/skip_for_now"
        android:textColor="@color/color_light_grey"
        android:paddingLeft="@dimen/dimen_5dp"
        android:padding="@dimen/dimen_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view"/>


    <View
        android:layout_width="@dimen/dimen_134dp"
        android:layout_height="@dimen/dimen_2dp"
        android:background="@color/color_grey_line"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>